# trading-smart

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.minimal.txt  requirements.txt  setup.py
config/: config.yaml
src/tracker/: binance_portfolio_viewer.py  config_example.py  run_viewer.py  usage_guide.md
